ObjectSerialization
===========================================

Version 1.0.3
-------------------------------------------
+ added support for nested polymorphic classes serialization

Version 1.0.2
-------------------------------------------
+ added support for nested classes serialization
+ added BSD 2-Clause License file

Version 1.0.1
-------------------------------------------
+ added support for built-in types serialization

Version 1.0.0
-------------------------------------------
+ created project structure
+ implemented basic string property serializers